--- a/mypage.html
+++ b/mypage.html
@@ -362,10 +362,10 @@
                 </div>
                 <div class="gallery" style="display: inline-block;width: 96px;height:117px;margin: 1px 1px;">
                     <a href='idol_gallery/idol_detail/momoka.html' style="display:block" class="jsOnDesignBtn">
-                        <div class="normal_cool" style="overflow:hidden;width:96px;height:117px;background-size:96px 117px;">
-                            <div class="idol" style="background: url( image_sp/card/quest/momoka_38.png ) -16px -16px no-repeat;background-size: 126px;margin:0;margin-left:3px;margin-top:3px;width:91px;height:111px;"></div>
+                        <div class="normal_cute" style="overflow:hidden;width:96px;height:117px;background-size:96px 117px;">
+                            <div class="idol" style="background: url( image_sp/card/quest/momoka_38.jpg ) -16px -16px no-repeat;background-size: 126px;margin:0;margin-left:3px;margin-top:3px;width:91px;height:111px;"></div>
                             <div class="name_plate_cute" style="-webkit-transform:skew(7deg,-7deg);position: absolute;left: 4px;bottom: 11px;width: 85px;background-size: 85px;height: 17px;">
-                                <div class="name_cool text_shadow_cute" style="font-size:10px;top:-4px;left:-8px;-webkit-backface-visibility: hidden;">櫻井桃華</div>
+                                <div class="name_cute text_shadow_cute" style="font-size:10px;top:-4px;left:-8px;-webkit-backface-visibility: hidden;">櫻井桃華</div>
                             </div>
                         </div>
                     </a>
